[package]
authors = ['Blockchain.art']
build = 'build.rs'
description = ''
edition = '2018'
homepage = 'https://github.com/BlockchainArt/bca-substrate-node'
license = 'Unlicense'
name = 'bca-node'
repository = 'https://github.com/BlockchainArt/bca-substrate-node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'bca-node'

[dependencies]
jsonrpc-core = '18.0.0'
structopt = '0.3.8'

[build-dependencies.substrate-build-script-utils]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.bca-runtime]
path = '../runtime'
version = '3.0.0-monthly-2021-08'

[dependencies.pallet-bca]
path = '../pallets/bca'

[dependencies.frame-benchmarking]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-basic-authorship]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-client-api]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-consensus]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-consensus-aura]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-keystore]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-rpc]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-rpc-api]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-telemetry]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-transaction-pool]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-api]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-block-builder]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-blockchain]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-consensus]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-consensus-aura]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-core]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-inherents]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-runtime]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-timestamp]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[features]
default = []
runtime-benchmarks = ['bca-runtime/runtime-benchmarks']
