[package]
authors = ['Blockchain.art']
edition = '2018'
homepage = 'https://github.com/BlockchainArt/bca-substrate-node'
license = 'Unlicense'
name = 'bca-runtime'
repository = 'https://github.com/BlockchainArt/bca-substrate-node'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.pallet-uniques]
default-features = false
git = 'https://github.com/BlockchainArt/substrate'
branch = 'bca'

[dependencies.pallet-bca]
default-features = false
path = '../pallets/bca'
version = '1.0.0'

[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
optional = true
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.frame-system-benchmarking]
default-features = false
optional = true
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-aura]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-grandpa]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.pallet-utility]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-consensus-aura]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/BlockchainArt/substrate.git'
branch = 'bca'

[features]
default = ['std']
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-bca/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'pallet-bca/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',
    'pallet-utility/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
]
